--- a/style.css
+++ b/style.css
@@ -68,14 +68,14 @@ margin-bottom: 10px;
 
 #box-satuduatiga {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(5, 1fr);
   gap: 15px;
   margin-top: 20px;
   width: 1600px;
   height: 150px;
 }
 
-#box1, #box2, #box3 {
+#total, #hadir, #izin,#sakit,#alpa {
   border: 2px solid #ccc;
   border-radius: 7px;
   padding: 20px;
